Fix Spring Security CORS preflight handling